Fix paragraph alignment on how it works section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,6 @@ body {
     text-align: justify;
     width: 300px;
     top: 20px;
-    left: 26px;
 }
 
 /* Circle number hover effect */
